<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:drawableRight="@drawable/offline"
        android:padding="5dp"
        android:text="@string/txtStatusOffline" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnForward"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/btnForward" >
        </Button>

        <Button
            android:id="@+id/btnBackward"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/btnBackward" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnLeft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/btnLeft" >
        </Button>

        <Button
            android:id="@+id/btnRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/btnRight" >
        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/btnStretch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnStretch" >
    </Button>
    
    <Button
        android:id="@+id/btnDance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDance" >
    </Button>

    <TextView
        android:id="@+id/txtDetails"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtDetails" />

</LinearLayout>